Cambie el HTML para la página.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,47 @@
-<html>
-    <head>
-        <title>Django Girls blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Django Girls Blog</a></h1>
-        </div>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <title>Pagina web de Daniel </title>
+    
+</head>
+<body>
+ <h1>Personajes ficticios que me gustan </h1>
+ <h1>1.-Valstrax</h1>
+<a href="https://monsterhunter.fandom.com/es/wiki/Valstrax"> <img src="http://pm1.narvii.com/6838/0c87cac5ef6c722c2d099e52a1fcfc2af543b761v2_00.jpg"></a>
 
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My first post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        </div>
+ <h2>Dragon de clase anciano conocido como "El cometa del caos"</h1>
+ <h1>Personaje de:Monster Hunter</h1>
+ <h1>2.-Bennet</h1>
+ <a href="https://genshin-impact.fandom.com/es/wiki/Bennett"><img src="https://static.wikia.nocookie.net/gen-impact/images/b/b7/Arte_de_personaje_Bennett.png/revision/latest/scale-to-width-down/267?cb=20210831160049&path-prefix=es"></a>
+ 
+ <h2>Verdadero arconte de Pyro y el dios supremo de Genshin Impact</h1>
+ <h1>Personaje de:Genshin Impact </h1>
+ <h1>3.-Issei</h1>
+ <a href="https://highschooldxd.fandom.com/es/wiki/Issei_Hyōdō#Anime_(Cuarta_Temporada)"></a>
+ 
+ <h2>Portador de la Sacred Gear "Booster Gear" el brazo izquerdo del dragon celestial Ddraig,tambien es conocido como el sekiryutei mas poderosos de la historia.</h1>
+ <h1>Personaje de:DXD </h1>
+ <h1>4.-Ddraig</h1>
+ <img src="https://static.tvtropes.org/pmwiki/pub/images/ddraig_red_dragon_emperor___profile_pic_infobox.png">
+ <h2>Es uno de los dos Dragones Celestiales conocido como Sekeryutei, fue sellado en uno de los Longinus: "El Boosted Gear" , es temido Por Los Ángeles, Ángeles Caidos y Los Demonios así como en todas las Mitologías y Razas, por sus poderes Destructivos que se dicen que son capaces de sobrepasar a los Dioses y a los Maou.</h1>
+ 
 
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My second post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
-        </div>
-    </body>
+
+<h1>5.-Morax</h1>
+<a href="""></a>
+<a href=""></a>
+ <img src="https://s3.getstickerpack.com/storage/uploads/sticker-pack/zhongli/sticker_4.png?52dcd9eb72dcce20ed745c4b21ef39d6&d=200x200"
+ <h1>x</h1>
+ <h1>Morax, también conocido como el Dios de los Contratos y Rex Lapis, fue el anterior Arconte Geo y uno de Los Siete quién gobernó la región de Liyue. Él es uno de los dos miembros originales de Los Siete </h1>
+ <h1>6.-Tannin</h1>
+ <img src="https://static.wikia.nocookie.net/highschooldxd/images/c/c3/Tannin_-_Profile_Pic_Infobox.png/revision/latest?cb=20150502002250">
+ <h1>7.-Azazel</h1>
+ <img src="https://static.wikia.nocookie.net/highschooldxd/images/8/85/Azazel_New.png/revision/latest?cb=20140214021501&path-prefix=es">
+ <h1>8.-Xenojiva</h1>
+ <img src="https://i.pinimg.com/736x/65/0b/90/650b90a045e29ffabfe5bd21961535aa.jpg">
+ <h1>9.-Dio</h1>
+ <img src="https://m.media-amazon.com/images/I/41jSvklqa4L._AC_.jpg">
+ <h1>10.-DANIEL</h1>
+ <img src="https://img.ifunny.co/images/9e4ae43781b686cc0419d9193e82cd150d8980473db47dc95a8a6ed55f0079db_1.jpg">
+</body>
 </html>
