--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,11 +1,20 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <title>Pagina web de Daniel </title>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     
-</head>
+</head> 
 <body>
- <h1>Personajes ficticios que me gustan </h1>
+
+    <body background="https://i.pinimg.com/originals/0c/cb/d5/0ccbd54298fe5030e82e4b5ccc9e97f8.jpg"></body>
+   
+ <h1>Personajes ficticios que me gustan <h1>
  <h1>1.-Valstrax</h1>
 <a href="https://monsterhunter.fandom.com/es/wiki/Valstrax"> <img src="http://pm1.narvii.com/6838/0c87cac5ef6c722c2d099e52a1fcfc2af543b761v2_00.jpg"></a>
 
@@ -17,12 +26,12 @@
  <h2>Verdadero arconte de Pyro y el dios supremo de Genshin Impact</h1>
  <h1>Personaje de:Genshin Impact </h1>
  <h1>3.-Issei</h1>
- <a href="https://highschooldxd.fandom.com/es/wiki/Issei_Hyōdō#Anime_(Cuarta_Temporada)"></a>
+ <a href="https://highschooldxd.fandom.com/es/wiki/Issei_Hyōdō#Anime_(Cuarta_Temporada)"><img src="https://pm1.narvii.com/6070/b0b87bb9d44d69ec4c9f0568afe3fdb72e60a59f_hq.jpg"></a>
  
  <h2>Portador de la Sacred Gear "Booster Gear" el brazo izquerdo del dragon celestial Ddraig,tambien es conocido como el sekiryutei mas poderosos de la historia.</h1>
  <h1>Personaje de:DXD </h1>
  <h1>4.-Ddraig</h1>
- <img src="https://static.tvtropes.org/pmwiki/pub/images/ddraig_red_dragon_emperor___profile_pic_infobox.png">
+ <a href="https://highschooldxd.fandom.com/es/wiki/Ddraig"><img src="https://static.tvtropes.org/pmwiki/pub/images/ddraig_red_dragon_emperor___profile_pic_infobox.png"></a>
  <h2>Es uno de los dos Dragones Celestiales conocido como Sekeryutei, fue sellado en uno de los Longinus: "El Boosted Gear" , es temido Por Los Ángeles, Ángeles Caidos y Los Demonios así como en todas las Mitologías y Razas, por sus poderes Destructivos que se dicen que son capaces de sobrepasar a los Dioses y a los Maou.</h1>
  
 
@@ -34,7 +43,9 @@
  <h1>x</h1>
  <h1>Morax, también conocido como el Dios de los Contratos y Rex Lapis, fue el anterior Arconte Geo y uno de Los Siete quién gobernó la región de Liyue. Él es uno de los dos miembros originales de Los Siete </h1>
  <h1>6.-Tannin</h1>
- <img src="https://static.wikia.nocookie.net/highschooldxd/images/c/c3/Tannin_-_Profile_Pic_Infobox.png/revision/latest?cb=20150502002250">
+
+ <a href="https://highschooldxd.fandom.com/es/wiki/Tannin?so=search"><img src="https://static.wikia.nocookie.net/highschooldxd/images/c/c3/Tannin_-_Profile_Pic_Infobox.png/revision/latest?cb=20150502002250"></a>
+ <h1>Ex rey Dragon </h1>
  <h1>7.-Azazel</h1>
  <img src="https://static.wikia.nocookie.net/highschooldxd/images/8/85/Azazel_New.png/revision/latest?cb=20140214021501&path-prefix=es">
  <h1>8.-Xenojiva</h1>
@@ -42,6 +53,16 @@
  <h1>9.-Dio</h1>
  <img src="https://m.media-amazon.com/images/I/41jSvklqa4L._AC_.jpg">
  <h1>10.-DANIEL</h1>
- <img src="https://img.ifunny.co/images/9e4ae43781b686cc0419d9193e82cd150d8980473db47dc95a8a6ed55f0079db_1.jpg">
+ <img src="https://static.wikia.nocookie.net/7cbf80b8-044b-4313-8009-95ccfc299bc1/scale-to-width/755">
+ <h1>10.1.-EZEQUIEL</h1>
+ <img src="https://preview.redd.it/vsqrj58nblm61.jpg?auto=webp&s=2b4334deaa05b574c5dc661b287f51b5dd4c167c">
+ <h1>10.2.-EDUARDO</h1>
+ <img src="https://pbs.twimg.com/media/Ekx-vlIWMAA2HyL.jpg">
+ <h1>10.3.-ALESS</h1>
+ <img src="https://i.pinimg.com/564x/07/d8/8b/07d88bec81cfc89617ec4db3ef0a20df.jpg">
+ 
+
+
+
 </body>
 </html>
