--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,23 +8,29 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+
+   
     
 </head> 
 <body>
 
     <body background="https://i.pinimg.com/originals/0c/cb/d5/0ccbd54298fe5030e82e4b5ccc9e97f8.jpg"></body>
    
- <h1>Personajes ficticios que me gustan <h1>
- <h1>1.-Valstrax</h1>
-<a href="https://monsterhunter.fandom.com/es/wiki/Valstrax"> <img src="http://pm1.narvii.com/6838/0c87cac5ef6c722c2d099e52a1fcfc2af543b761v2_00.jpg"></a>
 
+      <h1>Personajes ficticios que me gustan <h1>
+   
+    
+ 
+ <h1>1.-Valstrax</h1>
+ <a href="https://monsterhunter.fandom.com/es/wiki/Valstrax"> <img src="http://pm1.narvii.com/6838/0c87cac5ef6c722c2d099e52a1fcfc2af543b761v2_00.jpg"></a>
  <h2>Dragon de clase anciano conocido como "El cometa del caos"</h1>
  <h1>Personaje de:Monster Hunter</h1>
+ 
  <h1>2.-Bennet</h1>
  <a href="https://genshin-impact.fandom.com/es/wiki/Bennett"><img src="https://static.wikia.nocookie.net/gen-impact/images/b/b7/Arte_de_personaje_Bennett.png/revision/latest/scale-to-width-down/267?cb=20210831160049&path-prefix=es"></a>
- 
  <h2>Verdadero arconte de Pyro y el dios supremo de Genshin Impact</h1>
- <h1>Personaje de:Genshin Impact </h1>
+    <h1>Personaje de:Genshin Impact </h1>
+ 
  <h1>3.-Issei</h1>
  <a href="https://highschooldxd.fandom.com/es/wiki/Issei_Hyōdō#Anime_(Cuarta_Temporada)"><img src="https://pm1.narvii.com/6070/b0b87bb9d44d69ec4c9f0568afe3fdb72e60a59f_hq.jpg"></a>
  
@@ -40,26 +46,36 @@
 <a href="""></a>
 <a href=""></a>
  <img src="https://s3.getstickerpack.com/storage/uploads/sticker-pack/zhongli/sticker_4.png?52dcd9eb72dcce20ed745c4b21ef39d6&d=200x200"
- <h1>x</h1>
+ <h1></h1>
  <h1>Morax, también conocido como el Dios de los Contratos y Rex Lapis, fue el anterior Arconte Geo y uno de Los Siete quién gobernó la región de Liyue. Él es uno de los dos miembros originales de Los Siete </h1>
  <h1>6.-Tannin</h1>
 
  <a href="https://highschooldxd.fandom.com/es/wiki/Tannin?so=search"><img src="https://static.wikia.nocookie.net/highschooldxd/images/c/c3/Tannin_-_Profile_Pic_Infobox.png/revision/latest?cb=20150502002250"></a>
- <h1>Ex rey Dragon </h1>
+ <h1>Ex rey Dragones un Dragón Purpura y antiguamente uno de los "6 Reyes Dragón", conocido como el  Dragón del Meteoro Ardiente. </h1>
  <h1>7.-Azazel</h1>
- <img src="https://static.wikia.nocookie.net/highschooldxd/images/8/85/Azazel_New.png/revision/latest?cb=20140214021501&path-prefix=es">
+ <a href="https://highschooldxd.fandom.com/es/wiki/Azazel "><img src="https://static.wikia.nocookie.net/highschooldxd/images/8/85/Azazel_New.png/revision/latest?cb=20140214021501&path-prefix=es"></a>
+ <h1>Azazel es el ex-gobernador de los ángeles caídos y también el más poderoso de ellos, es el asesor del Club de Ocultismo.</h1>
+ 
  <h1>8.-Xenojiva</h1>
- <img src="https://i.pinimg.com/736x/65/0b/90/650b90a045e29ffabfe5bd21961535aa.jpg">
+ <a href="https://monsterhunter.fandom.com/es/wiki/Xeno%27jiiva"><img src="https://i.pinimg.com/736x/65/0b/90/650b90a045e29ffabfe5bd21961535aa.jpg"></a>
+<h2>El Xeno'jiiva es un gigantesco dragón anciano cuadrúpedo cubierto de escamas de color azul claro, emanando un brillo azulado por sus patas, cola, cabeza y alas, y una luz roja en el pecho. Sus alas son gigantescas y similares a las de una mariposa, mientras que sus patas alargadas terminan en garras como manos. </h2>
+ 
  <h1>9.-Dio</h1>
- <img src="https://m.media-amazon.com/images/I/41jSvklqa4L._AC_.jpg">
+ <a href="https://jojo.fandom.com/es/wiki/Dio_Brando"><img src="https://m.media-amazon.com/images/I/41jSvklqa4L._AC_.jpg"></a>
+<h2>Originalmente de nacimiento un hombre de bajos recursos, pero de ambición incomparable, Dio es un villano de poca conciencia, gran astucia, y un hambre insaciable de poder. </h2>
  <h1>10.-DANIEL</h1>
- <img src="https://static.wikia.nocookie.net/7cbf80b8-044b-4313-8009-95ccfc299bc1/scale-to-width/755">
+ <a href="https://es.memedroid.com/memes/detail/3705769/la-lancha-motora-que-quieres-tener-este-verano?refGallery=favorites&page=26&favorited=1"><img src="https://i1.sndcdn.com/artworks-VK1JabIryuQIbWXI-jxuZSQ-t500x500.jpg"></a>
  <h1>10.1.-EZEQUIEL</h1>
- <img src="https://preview.redd.it/vsqrj58nblm61.jpg?auto=webp&s=2b4334deaa05b574c5dc661b287f51b5dd4c167c">
+ <a href="https://pbs.twimg.com/media/EwnqSPqW8AMQvxU?format=jpg&name=4096x4096"><img src="https://preview.redd.it/vsqrj58nblm61.jpg?auto=webp&s=2b4334deaa05b574c5dc661b287f51b5dd4c167c"></a>
+ 
  <h1>10.2.-EDUARDO</h1>
- <img src="https://pbs.twimg.com/media/Ekx-vlIWMAA2HyL.jpg">
+ <a href=" https://c.tenor.com/YpiyCv630SsAAAAM/bob-esponja-dancando-mt.gif"><img src="http://images7.memedroid.com/images/UPLOADED765/60a3bb61ae82a.jpeg"></a>
+
+ 
  <h1>10.3.-ALESS</h1>
- <img src="https://i.pinimg.com/564x/07/d8/8b/07d88bec81cfc89617ec4db3ef0a20df.jpg">
+ <a href="https://i.pinimg.com/originals/a5/a1/0e/a5a10e585802212eae5300edbdec3f19.jpg"><img src="https://i.pinimg.com/564x/07/d8/8b/07d88bec81cfc89617ec4db3ef0a20df.jpg"></a>
+ 
+ 
  
 
 
