--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -19,64 +19,98 @@
 
       <h1>Personajes ficticios que me gustan <h1>
    
-    
+        <h1>________________________________________</h1>
  
  <h1>1.-Valstrax</h1>
  <a href="https://monsterhunter.fandom.com/es/wiki/Valstrax"> <img src="http://pm1.narvii.com/6838/0c87cac5ef6c722c2d099e52a1fcfc2af543b761v2_00.jpg"></a>
  <h2>Dragon de clase anciano conocido como "El cometa del caos"</h1>
  <h1>Personaje de:Monster Hunter</h1>
- 
+ <h1>________________________________________</h1>
  <h1>2.-Bennet</h1>
  <a href="https://genshin-impact.fandom.com/es/wiki/Bennett"><img src="https://static.wikia.nocookie.net/gen-impact/images/b/b7/Arte_de_personaje_Bennett.png/revision/latest/scale-to-width-down/267?cb=20210831160049&path-prefix=es"></a>
  <h2>Verdadero arconte de Pyro y el dios supremo de Genshin Impact</h1>
     <h1>Personaje de:Genshin Impact </h1>
- 
+    <h1>________________________________________</h1>
  <h1>3.-Issei</h1>
  <a href="https://highschooldxd.fandom.com/es/wiki/Issei_Hyōdō#Anime_(Cuarta_Temporada)"><img src="https://pm1.narvii.com/6070/b0b87bb9d44d69ec4c9f0568afe3fdb72e60a59f_hq.jpg"></a>
  
  <h2>Portador de la Sacred Gear "Booster Gear" el brazo izquerdo del dragon celestial Ddraig,tambien es conocido como el sekiryutei mas poderosos de la historia.</h1>
  <h1>Personaje de:DXD </h1>
+ <h1>________________________________________</h1>
  <h1>4.-Ddraig</h1>
  <a href="https://highschooldxd.fandom.com/es/wiki/Ddraig"><img src="https://static.tvtropes.org/pmwiki/pub/images/ddraig_red_dragon_emperor___profile_pic_infobox.png"></a>
  <h2>Es uno de los dos Dragones Celestiales conocido como Sekeryutei, fue sellado en uno de los Longinus: "El Boosted Gear" , es temido Por Los Ángeles, Ángeles Caidos y Los Demonios así como en todas las Mitologías y Razas, por sus poderes Destructivos que se dicen que son capaces de sobrepasar a los Dioses y a los Maou.</h1>
  
 
-
+    <h1>________________________________________</h1>
 <h1>5.-Morax</h1>
 <a href="""></a>
 <a href=""></a>
  <img src="https://s3.getstickerpack.com/storage/uploads/sticker-pack/zhongli/sticker_4.png?52dcd9eb72dcce20ed745c4b21ef39d6&d=200x200"
  <h1></h1>
  <h1>Morax, también conocido como el Dios de los Contratos y Rex Lapis, fue el anterior Arconte Geo y uno de Los Siete quién gobernó la región de Liyue. Él es uno de los dos miembros originales de Los Siete </h1>
+ <h1>________________________________________</h1>
  <h1>6.-Tannin</h1>
-
  <a href="https://highschooldxd.fandom.com/es/wiki/Tannin?so=search"><img src="https://static.wikia.nocookie.net/highschooldxd/images/c/c3/Tannin_-_Profile_Pic_Infobox.png/revision/latest?cb=20150502002250"></a>
  <h1>Ex rey Dragones un Dragón Purpura y antiguamente uno de los "6 Reyes Dragón", conocido como el  Dragón del Meteoro Ardiente. </h1>
+ <h1>________________________________________</h1>
  <h1>7.-Azazel</h1>
  <a href="https://highschooldxd.fandom.com/es/wiki/Azazel "><img src="https://static.wikia.nocookie.net/highschooldxd/images/8/85/Azazel_New.png/revision/latest?cb=20140214021501&path-prefix=es"></a>
  <h1>Azazel es el ex-gobernador de los ángeles caídos y también el más poderoso de ellos, es el asesor del Club de Ocultismo.</h1>
- 
+ <h1>________________________________________</h1>
  <h1>8.-Xenojiva</h1>
  <a href="https://monsterhunter.fandom.com/es/wiki/Xeno%27jiiva"><img src="https://i.pinimg.com/736x/65/0b/90/650b90a045e29ffabfe5bd21961535aa.jpg"></a>
 <h2>El Xeno'jiiva es un gigantesco dragón anciano cuadrúpedo cubierto de escamas de color azul claro, emanando un brillo azulado por sus patas, cola, cabeza y alas, y una luz roja en el pecho. Sus alas son gigantescas y similares a las de una mariposa, mientras que sus patas alargadas terminan en garras como manos. </h2>
- 
+<h1>________________________________________</h1>
  <h1>9.-Dio</h1>
  <a href="https://jojo.fandom.com/es/wiki/Dio_Brando"><img src="https://m.media-amazon.com/images/I/41jSvklqa4L._AC_.jpg"></a>
 <h2>Originalmente de nacimiento un hombre de bajos recursos, pero de ambición incomparable, Dio es un villano de poca conciencia, gran astucia, y un hambre insaciable de poder. </h2>
- <h1>10.-DANIEL</h1>
+<h1>________________________________________</h1>
+<h1>10.-DANIEL</h1>
  <a href="https://es.memedroid.com/memes/detail/3705769/la-lancha-motora-que-quieres-tener-este-verano?refGallery=favorites&page=26&favorited=1"><img src="https://i1.sndcdn.com/artworks-VK1JabIryuQIbWXI-jxuZSQ-t500x500.jpg"></a>
+ <h1>________________________________________</h1>
  <h1>10.1.-EZEQUIEL</h1>
  <a href="https://pbs.twimg.com/media/EwnqSPqW8AMQvxU?format=jpg&name=4096x4096"><img src="https://preview.redd.it/vsqrj58nblm61.jpg?auto=webp&s=2b4334deaa05b574c5dc661b287f51b5dd4c167c"></a>
- 
+ <h1>________________________________________</h1>
  <h1>10.2.-EDUARDO</h1>
  <a href=" https://c.tenor.com/YpiyCv630SsAAAAM/bob-esponja-dancando-mt.gif"><img src="http://images7.memedroid.com/images/UPLOADED765/60a3bb61ae82a.jpeg"></a>
-
+ <h1>________________________________________</h1>
  
  <h1>10.3.-ALESS</h1>
  <a href="https://i.pinimg.com/originals/a5/a1/0e/a5a10e585802212eae5300edbdec3f19.jpg"><img src="https://i.pinimg.com/564x/07/d8/8b/07d88bec81cfc89617ec4db3ef0a20df.jpg"></a>
  
- 
- 
+ <h1>Pesonajes ficticios que odio</h1>
+<h1>________________________________________</h1>
+ <h1>1.-Bakugo</h1>
+ <img src="https://static.wikia.nocookie.net/bokunoheroacademia/images/5/50/Katsuki_Bakugo_Hero_Costume_Action_Pose.png/revision/latest?cb=20191226213537&path-prefix=es"></a>
+ <h1>________________________________________</h1>
+ <h1>2.-Plesioth</h1>
+ <img src="https://static.wikia.nocookie.net/wikimh/images/3/35/Plesioth.gif/revision/latest?cb=20101213204652&path-prefix=es"></a>
+ <h1>________________________________________</h1>
+ <h1>3.Congalala</h1>
+ <img src="https://2img.net/h/leguideduhunter.fr/mhf2/bestiaire/conga/congalala.png"></a>
+ <h1>________________________________________</h1>
+ <h1>4.-Ophis</h1>
+ <img src="https://static.wikia.nocookie.net/highschooldxd/images/6/69/Ophis.png/revision/latest?cb=20140901022146&path-prefix=es"></a>
+ <h1>________________________________________</h1>
+ <h1>5.-Monoblos Blanco</h1>
+ <img src="https://static.wikia.nocookie.net/wikimh/images/5/5b/Monoblos_bianco.gif/revision/latest?cb=20101216193217&path-prefix=es"></a>
+ <h1>________________________________________</h1>
+ <h1>6.-Otome</h1>
+ <img src="http://pm1.narvii.com/6788/b683bad1eb79d26246df465362c2a7fcdf127b42v2_00.jpg"></a>
+ <h1>________________________________________</h1>
+ <h1>7.-Diadora </h1>
+ <img src="https://static.wikia.nocookie.net/villains/images/e/e2/Diodora.webp/revision/latest/top-crop/width/360/height/360?cb=20220417223607"></a>
+ <h1>________________________________________</h1>
+ <h1>8.-Yuno</h1>
+ <img src="https://static.wikia.nocookie.net/mirai-nikki/images/d/d6/Yuno_Perfil.jpg/revision/latest?cb=20161216164343&path-prefix=es"></a>
+ <h1>________________________________________</h1>
+ <h1>9.-Monika</h1>
+ <img src="https://static.wikia.nocookie.net/mamarre-estudios-espanol/images/3/34/Monika.jpg/revision/latest/top-crop/width/360/height/450?cb=20210721155946&path-prefix=es"></a>
+ <h1>________________________________________</h1>
+ <h1>10.-Konchus</h1>
+ <img src="https://www.eliteguias.com/img/juegos/monster-hunter-4-ultimate/konchu_2.jpg"></a>
+ <h1>________________________________________</h1>
 
 
 
