--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -13,7 +13,10 @@
     
 </head> 
 <body>
-
+ <h1>Hola,Este es mi top de pesonajes de anime,videojuegos,animados y reales</h1>
+ <img src="https://c.tenor.com/sod5dHhhvcgAAAAi/shaggy-dance.gif"></a>
+ 
+ <h1>Vamos a Empezar</h1>
     <body background="https://i.pinimg.com/originals/0c/cb/d5/0ccbd54298fe5030e82e4b5ccc9e97f8.jpg"></body>
    
 
@@ -40,7 +43,7 @@
  <h1>4.-Ddraig</h1>
  <a href="https://highschooldxd.fandom.com/es/wiki/Ddraig"><img src="https://static.tvtropes.org/pmwiki/pub/images/ddraig_red_dragon_emperor___profile_pic_infobox.png"></a>
  <h2>Es uno de los dos Dragones Celestiales conocido como Sekeryutei, fue sellado en uno de los Longinus: "El Boosted Gear" , es temido Por Los Ángeles, Ángeles Caidos y Los Demonios así como en todas las Mitologías y Razas, por sus poderes Destructivos que se dicen que son capaces de sobrepasar a los Dioses y a los Maou.</h1>
- 
+    <h1>Personaje de:DXD </h1>
 
     <h1>________________________________________</h1>
 <h1>5.-Morax</h1>
@@ -49,18 +52,23 @@
  <img src="https://s3.getstickerpack.com/storage/uploads/sticker-pack/zhongli/sticker_4.png?52dcd9eb72dcce20ed745c4b21ef39d6&d=200x200"
  <h1></h1>
  <h1>Morax, también conocido como el Dios de los Contratos y Rex Lapis, fue el anterior Arconte Geo y uno de Los Siete quién gobernó la región de Liyue. Él es uno de los dos miembros originales de Los Siete </h1>
+ <h1>Personaje de:Genshin Impact </h1>
  <h1>________________________________________</h1>
  <h1>6.-Tannin</h1>
  <a href="https://highschooldxd.fandom.com/es/wiki/Tannin?so=search"><img src="https://static.wikia.nocookie.net/highschooldxd/images/c/c3/Tannin_-_Profile_Pic_Infobox.png/revision/latest?cb=20150502002250"></a>
+ 
  <h1>Ex rey Dragones un Dragón Purpura y antiguamente uno de los "6 Reyes Dragón", conocido como el  Dragón del Meteoro Ardiente. </h1>
+ <h1>Personaje de:DXD </h1>
  <h1>________________________________________</h1>
  <h1>7.-Azazel</h1>
  <a href="https://highschooldxd.fandom.com/es/wiki/Azazel "><img src="https://static.wikia.nocookie.net/highschooldxd/images/8/85/Azazel_New.png/revision/latest?cb=20140214021501&path-prefix=es"></a>
  <h1>Azazel es el ex-gobernador de los ángeles caídos y también el más poderoso de ellos, es el asesor del Club de Ocultismo.</h1>
+ <h1>Personaje de:DXD </h1>
  <h1>________________________________________</h1>
  <h1>8.-Xenojiva</h1>
  <a href="https://monsterhunter.fandom.com/es/wiki/Xeno%27jiiva"><img src="https://i.pinimg.com/736x/65/0b/90/650b90a045e29ffabfe5bd21961535aa.jpg"></a>
 <h2>El Xeno'jiiva es un gigantesco dragón anciano cuadrúpedo cubierto de escamas de color azul claro, emanando un brillo azulado por sus patas, cola, cabeza y alas, y una luz roja en el pecho. Sus alas son gigantescas y similares a las de una mariposa, mientras que sus patas alargadas terminan en garras como manos. </h2>
+<h1>Personaje de:Monster Hunter</h1>
 <h1>________________________________________</h1>
  <h1>9.-Dio</h1>
  <a href="https://jojo.fandom.com/es/wiki/Dio_Brando"><img src="https://m.media-amazon.com/images/I/41jSvklqa4L._AC_.jpg"></a>
@@ -86,21 +94,26 @@
  <h1>________________________________________</h1>
  <h1>2.-Plesioth</h1>
  <img src="https://static.wikia.nocookie.net/wikimh/images/3/35/Plesioth.gif/revision/latest?cb=20101213204652&path-prefix=es"></a>
+ <h1>Personaje de:Monster Hunter</h1>
  <h1>________________________________________</h1>
  <h1>3.Congalala</h1>
  <img src="https://2img.net/h/leguideduhunter.fr/mhf2/bestiaire/conga/congalala.png"></a>
+ <h1>Personaje de:Monster Hunter</h1>
  <h1>________________________________________</h1>
  <h1>4.-Ophis</h1>
  <img src="https://static.wikia.nocookie.net/highschooldxd/images/6/69/Ophis.png/revision/latest?cb=20140901022146&path-prefix=es"></a>
+ <h1>Personaje de:DXD </h1>
  <h1>________________________________________</h1>
  <h1>5.-Monoblos Blanco</h1>
  <img src="https://static.wikia.nocookie.net/wikimh/images/5/5b/Monoblos_bianco.gif/revision/latest?cb=20101216193217&path-prefix=es"></a>
+ <h1>Personaje de:Monster Hunter</h1>
  <h1>________________________________________</h1>
  <h1>6.-Otome</h1>
  <img src="http://pm1.narvii.com/6788/b683bad1eb79d26246df465362c2a7fcdf127b42v2_00.jpg"></a>
  <h1>________________________________________</h1>
  <h1>7.-Diadora </h1>
  <img src="https://static.wikia.nocookie.net/villains/images/e/e2/Diodora.webp/revision/latest/top-crop/width/360/height/360?cb=20220417223607"></a>
+ <h1>Personaje de:DXD </h1>
  <h1>________________________________________</h1>
  <h1>8.-Yuno</h1>
  <img src="https://static.wikia.nocookie.net/mirai-nikki/images/d/d6/Yuno_Perfil.jpg/revision/latest?cb=20161216164343&path-prefix=es"></a>
@@ -110,9 +123,39 @@
  <h1>________________________________________</h1>
  <h1>10.-Konchus</h1>
  <img src="https://www.eliteguias.com/img/juegos/monster-hunter-4-ultimate/konchu_2.jpg"></a>
+ <h1>Personaje de:Monster Hunter</h1>
  <h1>________________________________________</h1>
-
-
+ <h1>Peronajes Badass</h1>
+ <h1>________________________________________</h1>
+ <h1>1.-Beru</h1>
+ <img src="https://static.wikia.nocookie.net/featteca/images/e/ea/Beru.png/revision/latest/scale-to-width-down/688?cb=20211218154221&path-prefix=es"></a>
+ <h1>________________________________________</h1>
+ <h1>2.-Kaiju no8</h1>
+ <img src="https://static.wikia.nocookie.net/featteca/images/f/f3/Monster-8_kaiju_form.png/revision/latest/scale-to-width-down/458?cb=20210617175046&path-prefix=es"></a>
+ <h1>________________________________________</h1>
+ <h1>3.-Issei Balance Breaker</h1>
+ <img src="https://img.wattpad.com/5951210ca1ebadd51bf9d271748c4c45efd7115e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f776174747061642d6d656469612d736572766963652f53746f7279496d6167652f4372736e5f6739394547317761673d3d2d3835303332303430392e313566636631336136306166323737393332303130343139313831322e6a7067?s=fit&w=720&h=720"></a>
+ <h1>________________________________________</h1>
+ <h1>4.-Vali</h1>
+ <img src="http://pm1.narvii.com/6341/6c5f62f1e9da10086540a8f313ba1fffa57af73e_00.jpg"></a>
+ <h1>________________________________________</h1>
+ <h1>5.-Deviljho</h1>
+ <img src="https://i.quotev.com/img/q/u/18/12/28/ovfdgon3eq.jpg"></a>
+ <h1>________________________________________</h1>
+ <h1>6.-Kaisel</h1>
+ <img src="https://cdna.artstation.com/p/assets/images/images/030/617/350/20200926121724/smaller_square/kirt-victor-1kaisel-wp-computer-lq.jpg?1601140644"></a>
+ <h1>________________________________________</h1>
+ <h1>7.-Natsu</h1>
+ <img src="https://i.pinimg.com/564x/9a/1f/03/9a1f03bc5fa3aa9969d04801c49a76c5.jpg"></a>
+ <h1>________________________________________</h1>
+ <h1>8.-Igris</h1>
+ <img src="https://m.media-amazon.com/images/I/61tk4hI91SS._AC_SX425_.jpg"></a>
+ <h1>________________________________________</h1>
+ <h1>9.-Nobile</h1>
+ <img src="https://i0.wp.com/www.korosenai.es/wp-content/uploads/2021/06/nobile-tartaglia-genshin-impact.jpg?fit=640%2C480&ssl=1"></a>
+ <h1>________________________________________</h1>
+ <h1>10.-Straze</h1>
+ <img src="https://qtoptens.com/wp-content/uploads/2021/09/Straze.png"></a>
 
 </body>
 </html>
